# barter_win

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  MIGRATION_PLAN.md  PROJECT_OPTIMIZATION_REPORT.md  PROJECT_OPTIMIZATION_REPORT_v1.1.md  README.md  REDIS_KEYS.md  TEST_FRAMEWORK.md  TEST_REPORT_20260328.md  TODO.txt  binance_test.rs  git_commit.bat  heartbeat_report.json  indicator_compare.rs  indicator_comparison_btcusdt.csv  pin_strategy_trade_log.json  pine_btcusdt_1000.csv  pine_compare_with_python_data.rs  pine_debug.rs  pine_indicator_1000.csv  pine_indicator_full.rs  pine_indicators.rs  pine_output_csv.rs  python_close_data.csv  rustfmt.toml  sandbox_output.txt  strategy_replay_report.json  verify_rust_vs_python.py
crates/a_common/: Cargo.toml
crates/a_common/src/: error.rs  event_bus.rs  lib.rs  symbol_rules_fetcher.rs  telegram_notifier.rs
crates/a_common/src/api/: binance_api.rs  kline_fetcher.rs  mod.rs
crates/a_common/src/backup/: memory_backup.rs  mod.rs
crates/a_common/src/claint/: error.rs  mod.rs
crates/a_common/src/config/: mod.rs  platform.rs  volatility.rs
crates/a_common/src/exchange/: mod.rs
crates/a_common/src/heartbeat/: clock.rs  config.rs  entry.rs  macros.rs  mod.rs  mode.rs  points.rs  reporter.rs  token.rs
crates/a_common/src/logs/: checkpoint.rs  mod.rs  writer.rs
crates/a_common/src/models/: dto.rs  market_data.rs  mod.rs  types.rs
crates/a_common/src/sysmon/: config.rs  display.rs  mod.rs  reader.rs  types.rs  writer.rs
crates/a_common/src/util/: mod.rs  sanitize.rs  telegram_notifier.rs
crates/a_common/src/volatility/: mod.rs
crates/a_common/src/ws/: binance_ws.rs  mod.rs  websocket.rs
crates/a_common/tests/: heartbeat_test.rs
crates/b_data_mock/: Cargo.toml
crates/b_data_mock/src/: lib.rs  recovery.rs  replay_source.rs  trader_pool.rs  trading_event_tracker.rs
crates/b_data_mock/src/api/: data_feeder.rs  data_sync.rs  events.rs  futures_account.rs  mock_account.rs  mock_config.rs  mock_gateway.rs  mod.rs  position.rs  symbol_registry.rs  trade_settings.rs
crates/b_data_mock/src/history/: manager.rs  mod.rs  provider.rs  types.rs
crates/b_data_mock/src/interceptor/: mod.rs  order_interceptor.rs  tick_interceptor.rs
crates/b_data_mock/src/models/: mod.rs  types.rs  ws.rs
crates/b_data_mock/src/store/: history_store.rs  memory_store.rs  mod.rs  store_impl.rs  store_trait.rs  volatility.rs
crates/b_data_mock/src/symbol_rules/: mod.rs
crates/b_data_mock/src/ws/: kline_generator.rs  mod.rs  noise.rs  tick_generator.rs  volatility.rs
crates/b_data_mock/tests/: interceptor_test.rs  test_bm_p0_coverage.rs  test_kline_generator.rs  test_kline_synthesizer.rs  test_mock_gateway.rs  test_models.rs  test_replay_source.rs  test_store.rs  test_symbol_rules.rs
crates/b_data_source/: Cargo.toml  test.bat  test.sh
crates/b_data_source/examples/: mock_ws_handshake.rs  test_trade_settings.rs
crates/b_data_source/src/: error.rs  futures_account.rs  kline.rs  lib.rs  recovery.rs  replay_source.rs  shared_store.rs  trader_pool.rs  volatility.rs  ws.rs
crates/b_data_source/src/api/: account.rs  binance_api.rs  data_feeder.rs  data_sync.rs  mod.rs  position.rs  symbol_registry.rs  trade_settings.rs
crates/b_data_source/src/claint/: mod.rs
crates/b_data_source/src/config/: mod.rs
crates/b_data_source/src/data_feeder/: mod.rs
crates/b_data_source/src/engine/: auditor.rs  clock.rs  mod.rs  processor.rs  run.rs
crates/b_data_source/src/futures/: account.rs  data_sync.rs  mod.rs  position.rs
crates/c_data_process/: Cargo.toml
crates/c_data_process/src/: indicator_services.rs  indicator_store.rs  lib.rs  pine_indicator_full.rs  processor.rs  types.rs  volatility.rs
crates/d_checktable/: Cargo.toml
crates/d_checktable/examples/: h_15m_test.rs
crates/d_checktable/src/: lib.rs  strategy_service.rs  types.rs
crates/d_checktable/tests/: dt_001_checktable_test.rs  dt_002_003_trader_executor_test.rs  dt_004_quantity_calculator_test.rs  dt_006_007_signal_status_test.rs  dt_011_check_chain_context_test.rs
crates/d_risk_monitor/: Cargo.toml
crates/d_risk_monitor/src/: lib.rs
crates/e_strategy/: Cargo.toml
crates/e_strategy/src/: lib.rs
crates/engine/: Cargo.toml  lib.rs
crates/engine/src/: account_pool.rs  channel.rs  check_table.rs  checkpoint.rs  checkpoint_integration.rs  disaster_recovery.rs  engine.rs  error.rs  gateway.rs  lib.rs  margin_config.rs  memory_backup.rs  minute_risk.rs  mock_binance_gateway.rs  mode.rs  order.rs  order_check.rs  persistence.rs  pipeline.rs  pipeline_form.rs  pnl_manager.rs  position_exclusion.rs  position_manager.rs  risk.rs  risk_rechecker.rs  round_guard.rs  sqlite_persistence.rs  strategy_pool.rs  symbol_rules.rs  symbol_rules_fetcher.rs  telegram_notifier.rs  thresholds.rs  types.rs
crates/f_engine/: Cargo.toml
crates/f_engine/src/: engine_manager.rs  lib.rs  types.rs
crates/g_test/: Cargo.toml
crates/g_test/src/: lib.rs  strategy.rs
crates/h_sandbox/: Cargo.toml  README.md
crates/h_sandbox/docs/: OPTIMIZATION_LOG.md  RealMarket_PressureTest_Report.md  shadow_gateway_design.md
crates/h_sandbox/examples/: demo_tick.rs  full_loop_test.rs  historical_replay.rs  kline_replay.rs  perf_test.rs  sim_trading.rs  sim_trading_parquet.rs  stress_concurrent_price_update.rs  stress_network_volatility.rs  stress_order_batch.rs  stress_order_rejection.rs  stress_price_spike.rs  stress_rate_limit.rs  testnet_simulation.rs
crates/h_sandbox/src/: config.rs  lib.rs  mock_binance_gateway.rs  shadow_account.rs  shadow_gateway.rs  shard_cache.rs
crates/market/: Cargo.toml  lib.rs
crates/market/src/: binance_ws.rs  data_feeder.rs  error.rs  kline.rs  kline_persistence.rs  lib.rs  orderbook.rs  recovery.rs  symbol_registry.rs  types.rs  volatility.rs  websocket.rs
crates/strategy/: Cargo.toml
crates/strategy/src/: error.rs  lib.rs  pin_strategy.rs  traits.rs  trend_strategy.rs  types.rs
crates/x_data/: Cargo.toml
crates/x_data/src/: error.rs  lib.rs
crates/x_data/tests/: x_data_test.rs
h_sandbox_test/: Cargo.toml  sandbox_main.rs
(+721 files in other folders)
