[workspace]
members = ["crates/*"]
resolver = "3"

[package]
name = "trading-system"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "trading-system"
path = "src/main.rs"

[[bin]]
name = "binance_test"
path = "binance_test.rs"

[[bin]]
name = "indicator_compare"
path = "indicator_compare.rs"

[[bin]]
name = "pine_debug"
path = "pine_debug.rs"

[[bin]]
name = "pine_output_csv"
path = "pine_output_csv.rs"

[[bin]]
name = "pine_compare"
path = "pine_compare_with_python_data.rs"

[dependencies]
account = { path = "crates/account" }
market = { path = "crates/market" }
indicator = { path = "crates/indicator" }
strategy = { path = "crates/strategy" }
engine = { path = "crates/engine" }
tokio = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.12", features = ["json", "blocking"] }
csv = "1.1"

[workspace.dependencies]
parking_lot = "0.12"
rust_decimal = { version = "1.36", features = ["maths"] }
rust_decimal_macros = "1.36"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
fnv = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
tempfile = "3.10"
