[workspace]
members = ["crates/*"]
resolver = "3"

[package]
name = "trading-system"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "trading-system"
path = "src/main.rs"

[[bin]]
name = "data-printer"
path = "src/main_data_printer.rs"


[dependencies]
account = { path = "crates/account" }
market = { path = "crates/market" }
indicator = { path = "crates/indicator" }
strategy = { path = "crates/strategy" }
engine = { path = "crates/engine" }
tokio = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.12", features = ["json", "blocking"] }
csv = "1.1"
clap = { version = "4.4", features = ["derive"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"

[workspace.dependencies]
parking_lot = "0.12"
rust_decimal = { version = "1.36", features = ["maths"] }
rust_decimal_macros = "1.36"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
fnv = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
tempfile = "3.10"
reqwest = { version = "0.12", features = ["json", "blocking"] }
