[workspace]
members = [
    "crates/a_common",
    "crates/b_data_source",
    "crates/c_data_process",
    "crates/d_checktable",
    "crates/e_risk_monitor",
    "crates/f_engine",
    "crates/g_test",
    "crates/h_sandbox",
    "crates/x_data",
]
resolver = "3"

[package]
name = "trading-system"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "trading-system"
path = "src/main.rs"

[[bin]]
name = "sandbox"
path = "src/sandbox_main.rs"


[dependencies]
a_common = { path = "crates/a_common" }
b_data_source = { path = "crates/b_data_source" }
c_data_process = { path = "crates/c_data_process" }
d_checktable = { path = "crates/d_checktable" }
e_risk_monitor = { path = "crates/e_risk_monitor" }
f_engine = { path = "crates/f_engine" }
h_sandbox = { path = "crates/h_sandbox" }
tokio = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.12", features = ["json", "blocking", "native-tls"] }
csv = "1.1"
clap = { version = "4.4", features = ["derive"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
native-tls = "0.2"
futures-util = "0.3"
serde = { workspace = true }

[workspace.dependencies]
parking_lot = "0.12"
rust_decimal = { version = "1.36", features = ["maths"] }
rust_decimal_macros = "1.36"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
futures = "0.3"
fnv = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
tempfile = "3.10"
reqwest = { version = "0.12", features = ["json", "blocking", "native-tls"] }
csv = "1.1"
