[package]
name = "a_common"
version = "0.1.0"
edition = "2024"

[dependencies]
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
once_cell = "1.19"
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
futures-util = "0.3"
rand = { version = "0.8", features = ["small_rng"] }

# x_data re-export for backward compatibility
x_data = { path = "../x_data" }
