[package]
name = "b_data_source"
version = "0.1.0"
edition = "2024"

[dependencies]
rust_decimal = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
rand = "0.8"
thiserror = { workspace = true }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
tracing = { workspace = true }
redis = { version = "1.1", features = ["tokio-comp", "connection-manager"] }
parking_lot = "0.12"
fnv = "1.0"
once_cell = "1.19"
reqwest = { version = "0.12", features = ["json"] }
rust_decimal_macros = { workspace = true }
serde_json = { workspace = true }
a_common = { path = "../a_common" }

[dev-dependencies]
b_data_mock = { path = "../b_data_mock" }
