[package]
name = "c_data_process"
version = "0.1.0"
edition = "2024"

[dependencies]
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
a_common = { path = "../a_common" }
b_data_source = { path = "../b_data_source" }
parking_lot = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
fnv = { workspace = true }
