[package]
name = "d_checktable"
version = "0.1.0"
edition = "2024"

[dependencies]
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
fnv = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.33"
async-trait = "0.1"
b_data_source = { path = "../b_data_source" }
c_data_process = { path = "../c_data_process" }
e_risk_monitor = { path = "../e_risk_monitor" }
a_common = { path = "../a_common" }
x_data = { path = "../x_data" }

[dev-dependencies]
tempfile = "3"
futures = { workspace = true }
tracing-subscriber = "0.3"

[[example]]
name = "h_15m_test"
path = "examples/h_15m_test.rs"
