[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strategy = { path = "../strategy" }
account = { path = "../account" }
market = { path = "../market" }
indicator = { path = "../indicator" }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
fnv = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
rusqlite = { workspace = true }
