[package]
name = "f_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
a_common = { path = "../a_common" }
b_data_source = { path = "../b_data_source" }
c_data_process = { path = "../c_data_process" }
d_checktable = { path = "../d_checktable" }
e_risk_monitor = { path = "../e_risk_monitor" }

chrono = { workspace = true }
futures = { workspace = true }
parking_lot = "0.12"
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
fnv = { workspace = true }
async-trait = { workspace = true }
