[package]
name = "g_test"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core crates
b_data_source = { path = "../b_data_source" }
a_common = { path = "../a_common" }
c_data_process = { path = "../c_data_process" }
d_checktable = { path = "../d_checktable" }
e_risk_monitor = { path = "../e_risk_monitor" }
f_engine = { path = "../f_engine" }

# Test dependencies
tokio = { version = "1", features = ["full"] }
rust_decimal = "1"
rust_decimal_macros = "1"
serde_json = "1"
fnv = "1"
chrono = "0.4"
parking_lot = "0.12"
tempfile = "3"
