[package]
name = "h_sandbox"
version = "0.1.0"
edition = "2024"

[dependencies]
a_common = { path = "../a_common" }
b_data_source = { path = "../b_data_source" }
c_data_process = { path = "../c_data_process" }
d_checktable = { path = "../d_checktable" }
e_risk_monitor = { path = "../e_risk_monitor" }
f_engine = { path = "../f_engine" }

parking_lot = "0.12"
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
fnv = "1.0"
chrono = { workspace = true }
parquet = { version = "56", default-features = false, features = ["snap"] }
clap = { version = "4", features = ["derive"] }
rand = "0.8"
serde_json = "1"
