[package]
name = "h_sandbox"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "full_production_sandbox"
path = "src/bin/sandbox_full_production.rs"

[[bin]]
name = "download_hotusdt_history"
path = "src/bin/download_hotusdt_history.rs"

[[bin]]
name = "generate_mock_hotusdt"
path = "src/bin/generate_mock_hotusdt.rs"

[dependencies]
a_common = { path = "../a_common" }
b_data_source = { path = "../b_data_source" }
c_data_process = { path = "../c_data_process" }
d_checktable = { path = "../d_checktable" }
e_risk_monitor = { path = "../e_risk_monitor" }
f_engine = { path = "../f_engine" }

parking_lot = "0.12"
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
fnv = "1.0"
chrono = { workspace = true }
clap = { version = "4", features = ["derive"] }
rand = "0.8"
serde_json = "1"
csv = { workspace = true }
