[package]
name = "market"
version = "0.1.0"
edition = "2024"

[dependencies]
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
rand = "0.8"
thiserror = { workspace = true }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
tracing = { workspace = true }
