[package]
name = "strategy"
version = "0.1.0"
edition = "2024"

[dependencies]
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
market = { path = "../market" }
indicator = { path = "../indicator" }
