[package]
name = "x_data"
version = "0.1.0"
edition = "2021"

[dependencies]
# 数值计算
rust_decimal = { workspace = true }

# 时间处理
chrono = { workspace = true, features = ["serde"] }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# 错误处理
thiserror = { workspace = true }

# 异步 trait
async-trait = { workspace = true }

# 同步原语
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
